--- a/PORTFOLIO/css/style.css
+++ b/PORTFOLIO/css/style.css
@@ -46,6 +46,7 @@ section, footer {
 }
 section.container {
     width: var(--max-size-width);
+    max-width: 100%;
     margin: auto;
 }
 .title {
@@ -97,6 +98,16 @@ section.container {
 .header-menu-item.active {
     border: 1px solid var(--color-accent);
     border-radius: 4px;
+}
+/* media query - header toggler */
+.header-toggle {
+    display: none;
+    color: var(--color-white);
+    background-color: var(--color-black);
+    font-size: 1.5rem;
+    position: absolute;
+    right: 1rem;
+    top: 1.3rem;
 }
 
 /*
@@ -367,4 +378,84 @@ section.container {
 }
 .contact-link:hover {
     color: var(--color-accent);
+}
+
+/****************************************
+    media screen - 601px ❌ 1000px
+****************************************/
+@media screen and (max-width: 1000px) {
+    .header {
+        flex-direction: column;
+        align-items: start;
+    }
+    .header-menu {
+        display: none;
+    }
+    .header-toggle {
+        display: block;
+    }
+    section {
+        padding: 3rem 2rem;        
+    }
+    .title {
+        font-size: 2rem;
+    }
+    .description{
+        font-size: 1rem;
+    }
+    #home {
+        padding: 5rem 3rem;
+    }
+    .home-title {
+        font-size: 2.5rem;
+        margin-bottom: 0.5rem;
+    }
+    #about {
+        border: 1px solid red;
+    }
+    .majors {
+        flex-direction: column;
+        align-items: center;
+    }
+    .major {
+        width: 30rem;
+    }
+    .job {
+        justify-content: center;
+    }
+    .skills {
+        grid-template-columns: 1fr;
+    }
+    .categories {
+        flex-direction: column;
+    }
+    .category {
+        width: 80%;
+    }
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .testimonial {
+        flex-direction: column;
+    }
+    .testimonial:nth-child(even) .testimonial-img {
+        order: 0;
+    }
+    .arrow-up {
+        bottom: 1rem;
+        right: 1.5rem;
+        font-size: 2rem;
+        width: 3rem; 
+        height: 3rem; 
+    }
+
+}
+
+/****************************************
+    media screen - 1px ❌ 600px
+****************************************/
+@media screen and (max-width: 600px) {
+    .projects {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
