--- a/react/basic-app/src/css/Avatar.css
+++ b/react/basic-app/src/css/Avatar.css
@@ -1,3 +1,8 @@
+.avatar-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
 .avatar {
     width: 200px;
     height: 240px;
