--- a/react/basic-app/src/css/Product.css
+++ b/react/basic-app/src/css/Product.css
@@ -41,11 +41,14 @@
     cursor: pointer;
 }
 .best-product-img-no {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;   left: 0;
-    background-color: #000;
-    color: #fff;
-    padding: 8px 12px;
+    /* background-color: #000;
+    color: #fff; */
+    /* padding: 8px 12px; */
 }
 .best-product-img {
     position: relative;
